--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Grey">#605D5D</color>
     <color name="Background">#f5f3ef</color>
+    <color name="Maroon">#dd2e44</color>
 </resources>
