--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="Grey">#605D5D</color>
     <color name="Background">#f5f3ef</color>
     <color name="Maroon">#dd2e44</color>
+    <color name="Text_color">#642714</color>
 </resources>
