--- a/app/src/main/res/layout/activity_state_name.xml
+++ b/app/src/main/res/layout/activity_state_name.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -40,49 +39,17 @@
                 tools:ignore="RelativeOverlap" />
         </RelativeLayout>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/state_card_view"
-            android:layout_width="match_parent"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/states_recycler_view"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="10dp"
-            app:cardCornerRadius="25dp"
-            app:cardElevation="5dp">
+            android:layout_width="match_parent"
+            android:layout_margin="10dp"
+            android:background="@color/Background"
+            android:paddingBottom="10dp">
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="50dp"
-                android:layout_marginBottom="15dp"
-                android:layout_weight="2"
-                android:gravity="center">
+        </androidx.recyclerview.widget.RecyclerView>
 
-                <TextView
-                    android:id="@+id/state_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_gravity="center_vertical"
-                    android:text="@string/state_name"
-                    android:textColor="@color/Text_color"
-                    android:textSize="21sp" />
 
-                <TextView
-                    android:id="@+id/number_of_question"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:text="@string/zero"
-                    android:textColor="@color/Text_color"
-                    android:textSize="21sp"
-                    tools:ignore="RelativeOverlap" />
-
-            </RelativeLayout>
-
-        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
 
