--- a/app/src/main/res/layout/activity_quiz_questions.xml
+++ b/app/src/main/res/layout/activity_quiz_questions.xml
@@ -25,8 +25,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/round_button"
         android:text="Submit" />
 
