--- a/app/src/main/res/layout/question_layout.xml
+++ b/app/src/main/res/layout/question_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/question_card_view"
@@ -105,7 +105,7 @@
                         android:layout_height="match_parent"
                         android:text="@string/options"
                         android:textColor="@color/Text_color"
-                        android:textSize="21sp" />
+                        android:textSize="18sp" />
 
                     <RadioButton
                         android:id="@+id/quiz_option2"
@@ -114,7 +114,7 @@
                         android:layout_marginTop="5dp"
                         android:text="@string/options"
                         android:textColor="@color/Text_color"
-                        android:textSize="21sp" />
+                        android:textSize="18sp" />
 
                     <RadioButton
                         android:id="@+id/quiz_option3"
@@ -123,7 +123,7 @@
                         android:layout_marginTop="5dp"
                         android:text="@string/options"
                         android:textColor="@color/Text_color"
-                        android:textSize="21sp" />
+                        android:textSize="18sp" />
 
                     <RadioButton
                         android:id="@+id/quiz_option4"
@@ -132,7 +132,7 @@
                         android:layout_marginTop="5dp"
                         android:text="@string/options"
                         android:textColor="@color/Text_color"
-                        android:textSize="21sp" />
+                        android:textSize="18sp" />
 
                 </RadioGroup>
 
