--- a/app/src/main/res/layout/question_layout.xml
+++ b/app/src/main/res/layout/question_layout.xml
@@ -83,14 +83,14 @@
 
                 <TextView
                     android:id="@+id/quiz_question"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_gravity="center_vertical"
                     android:layout_marginTop="10dp"
                     android:text="@string/question_here"
                     android:textColor="@color/Text_color"
-                    android:textSize="25sp" />
+                    android:textSize="23sp" />
 
                 <RadioGroup
                     android:layout_width="wrap_content"
@@ -135,7 +135,6 @@
                         android:textSize="18sp" />
 
                 </RadioGroup>
-
 
             </RelativeLayout>
 
